--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'org.openjfx.javafxplugin' version '0.0.5'
 }
 
 group 'org.example'
@@ -11,4 +12,9 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+javafx {
+    version = "12"
+    modules = [ 'javafx.controls' ]
 }
